crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@124.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{\"a\": {\"b\": 1}}', 'lax $.**{1 to last}.b ? (@ > 0)');"
---
SelectStmt@0..78
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..76
    FuncCall@7..76
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..41
        Sconst@24..41 "'{\"a\": {\"b\": 1}}'"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      AConst@43..76
        Sconst@43..76 "'lax $.**{1 to last}. ..."
  Ascii41@76..77 ")"
  Ascii59@77..78 ";"

