crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@127.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{\"a\": {\"c\": {\"b\": 1}}}', 'lax $.**{0}.b ? (@ > 0)');"
---
SelectStmt@0..77
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..75
    FuncCall@7..75
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..48
        Sconst@24..48 "'{\"a\": {\"c\": {\"b\": 1}}}'"
      Ascii44@48..49 ","
      Whitespace@49..50 " "
      AConst@50..75
        Sconst@50..75 "'lax $.**{0}.b ? (@ > ..."
  Ascii41@75..76 ")"
  Ascii59@76..77 ";"

