crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@132.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{\"a\": {\"c\": {\"b\": 1}}}', 'lax $.**{2 to 3}.b ? (@ > 0)');"
---
SelectStmt@0..82
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..80
    FuncCall@7..80
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..48
        Sconst@24..48 "'{\"a\": {\"c\": {\"b\": 1}}}'"
      Ascii44@48..49 ","
      Whitespace@49..50 " "
      AConst@50..80
        Sconst@50..80 "'lax $.**{2 to 3}.b ? ..."
  Ascii41@80..81 ")"
  Ascii59@81..82 ";"

